cfn_benchmark/cfn_templates/ONSdigital__Cloudfoundry-AWS-Cloudformation/AWS-Bosh-003-SecurityGroups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Standard Security Groups",

  "Parameters": {
    "DeploymentName": {
      "Type": "String",
      "Description": "Deployment Name",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern": "^([A-Za-z0-9]+[A-Za-z0-9-]?)+[A-Za-z0-9]$",
      "ConstraintDescription": "Must be a valid domain label matching /^([A-Za-z0-9]+[A-Za-z0-9-])+[A-Za-z0-9]$/"
    },
    "Availability": {
      "Type": "String",
      "Default": "SingleAZ",
      "Description": "Availability Type",
      "AllowedValues": [ "SingleAZ", "SingleAZ-HA", "MultiAZ" ]
    }
  },

  "Outputs": {
    "ApplicationLbSecurityGroup": {
      "Description": "Application Load Balancer Security Group",
      "Value": { "Ref": "ApplicationLbSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-ApplicationLbSecurityGroup" } }
    },
    "DirectorInstanceSecurityGroup": {
      "Description": "Director Instance Security Group",
      "Value": { "Ref": "DirectorInstanceSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-DirectorInstanceSecurityGroup" } }
    },
    "PrivateSecurityGroup": {
      "Description": "Private Security Groups",
      "Value": { "Ref": "PrivateSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-PrivateSecurityGroup" } }
    },
    "RouterSecurityGroup": {
      "Description": "Router Security Groups",
      "Value": { "Ref": "RouterSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-RouterSecurityGroup" } }
    },
    "SmtpSecurityGroup": {
      "Description": "SMTP Outbound Security Groups",
      "Value": { "Ref": "SmtpSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-SmtpSecurityGroup" } }
    }
  },

  "Conditions": {
    "MultiAz": { "Fn::Equals": [ { "Ref": "Availability" }, "MultiAZ" ] }
  },

  "Resources": {
    "ApplicationLbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Load Balancer Security Group",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:ApplicationLbSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "DirectorInstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Director Security Group",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:DirectorInstanceSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "PrivateSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Private In Out",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:PrivateSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "RouterSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Router In Out",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:RouterSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "SmtpSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SMTP Outbound",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Outbound SMTP TCP Port 25 (smtp)",
            "FromPort": "25",
            "ToPort": "25",
            "IpProtocol": "tcp"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Outbound SMTP TCP Port 25 (submission)",
            "FromPort": "587",
            "ToPort": "587",
            "IpProtocol": "tcp"
          }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:SmtpSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    }
  }
}
